--- a/app/src/main/res/layout/activity_join_part3.xml
+++ b/app/src/main/res/layout/activity_join_part3.xml
@@ -56,12 +56,16 @@
     <EditText
         android:id="@+id/edittext_name"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/textbox_state_normal"
+        android:background="@drawable/selector_default_textbox"
         android:hint="@string/user_name"
-        android:padding="15dp"
+        android:inputType="text"
+        android:paddingHorizontal="15dp"
+        android:paddingVertical="10dp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.06"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textview_join_user_name"
         app:layout_constraintWidth_percent="0.91" />
@@ -105,13 +109,16 @@
     <EditText
         android:id="@+id/edittext_password"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/textbox_state_normal"
+        android:background="@drawable/selector_default_textbox"
         android:hint="@string/pw"
-        android:orientation="horizontal"
-        android:padding="15dp"
+        android:inputType="textPassword"
+        android:paddingHorizontal="15dp"
+        android:paddingVertical="10dp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@id/edittext_name"
+        app:layout_constraintHeight_percent="0.06"
         app:layout_constraintStart_toStartOf="@id/edittext_name"
         app:layout_constraintTop_toBottomOf="@id/textview_join_user_password" />
 
@@ -156,12 +163,16 @@
     <EditText
         android:id="@+id/edittext_password_check"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="80dp"
-        android:background="@drawable/textbox_state_normal"
+        android:background="@drawable/selector_default_textbox"
         android:hint="@string/password_check"
-        android:padding="15dp"
+        android:inputType="textPassword"
+        android:paddingHorizontal="15dp"
+        android:paddingVertical="10dp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@id/edittext_password"
+        app:layout_constraintHeight_percent="0.06"
         app:layout_constraintStart_toStartOf="@id/edittext_password"
         app:layout_constraintTop_toBottomOf="@id/edittext_password" />
 
