--- a/app/src/main/res/layout/activity_reset_pw.xml
+++ b/app/src/main/res/layout/activity_reset_pw.xml
@@ -8,14 +8,13 @@
     android:background="@color/main_theme_subcyan"
     tools:context=".ui.login.ResetPwActivity">
 
-
     <TextView
-        android:id="@+id/textview_pwResetLink"
+        android:id="@+id/textview_pw_reset_link"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/pw_reset_link"
-        android:textColor="@color/white"
+        android:textColor="@color/general_theme_white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,24 +28,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/user_email"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textFontWeight="900"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@id/textview_pwResetLink"
-        app:layout_constraintStart_toStartOf="@id/textview_pwResetLink"
-        app:layout_constraintTop_toBottomOf="@id/textview_pwResetLink" />
+        app:layout_constraintEnd_toEndOf="@id/textview_pw_reset_link"
+        app:layout_constraintStart_toStartOf="@id/textview_pw_reset_link"
+        app:layout_constraintTop_toBottomOf="@id/textview_pw_reset_link" />
 
     <TextView
         android:id="@+id/textview_attachLink"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:fontFamily="@font/notosanskr_regular"
+        android:fontFamily="@font/noto_sans_kr_regular"
         android:gravity="center"
         android:text="@string/attach_link"
-        android:textColor="@color/white"
+        android:textColor="@color/general_theme_white"
         android:textFontWeight="400"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@id/textview_email"
@@ -58,10 +57,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
-        android:fontFamily="@font/notosanskr_regular"
+        android:fontFamily="@font/noto_sans_kr_regular"
         android:gravity="center"
         android:text="@string/additional_message"
-        android:textColor="@color/white"
+        android:textColor="@color/general_theme_white"
         android:textFontWeight="400"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@id/textview_attachLink"
@@ -73,7 +72,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_rectangle_round"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/general_theme_white"
         android:text="@string/btn_close"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/textview_additional"
