--- a/app/src/main/res/layout/activity_find_pw.xml
+++ b/app/src/main/res/layout/activity_find_pw.xml
@@ -73,6 +73,20 @@
         app:layout_constraintTop_toBottomOf="@id/textview_insert_email"
         app:layout_constraintWidth_percent="0.91" />
 
+    <TextView
+        android:id="@+id/textview_error_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:fontFamily="@font/noto_sans_kr_regular"
+        android:includeFontPadding="false"
+        android:text="@string/not_account"
+        android:textColor="@color/general_theme_red"
+        android:textSize="11sp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="@id/edittext_email"
+        app:layout_constraintTop_toBottomOf="@id/edittext_email" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_send"
         style="@style/DefaultButton"
