--- a/app/src/main/res/layout/activity_settings_profile.xml
+++ b/app/src/main/res/layout/activity_settings_profile.xml
@@ -35,85 +35,66 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/textview_profileSetting" />
 
-    <FrameLayout
-        android:id="@+id/layout_checkPoint"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:id="@+id/imagebutton_save"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_check"
+        android:contentDescription="@string/blank_text"
         app:layout_constraintBottom_toBottomOf="@id/textview_profileSetting"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/textview_profileSetting"
-        app:layout_constraintTop_toTopOf="@id/textview_profileSetting">
-
-        <ImageView
-            android:id="@+id/imageview_checkPointCircle"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:background="@drawable/circle"
-            android:backgroundTint="@color/general_theme_black" />
-
-        <ImageView
-            android:id="@+id/imageview_checkPoint"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/general_theme_white"
-            app:srcCompat="@drawable/ic_check" />
-    </FrameLayout>
-
-    <!-- Todo: 외곽 stroke(system_theme_lightgray) 작업 필요, image clip 작업 필요 -->
-    <ImageView
-        android:id="@+id/imageview_profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="33.5dp"
-        android:background="@drawable/img_profile"
-        app:layout_constraintEnd_toEndOf="@id/textview_profileSetting"
-        app:layout_constraintStart_toStartOf="@id/textview_profileSetting"
-        app:layout_constraintTop_toBottomOf="@id/textview_profileSetting" />
+        app:layout_constraintTop_toTopOf="@id/textview_profileSetting"/>
 
     <FrameLayout
-        android:id="@+id/layout_ProfilePlus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/imageview_profile"
-        app:layout_constraintEnd_toEndOf="@id/imageview_profile">
+        android:id="@+id/frame_profile"
+        android:layout_width="166dp"
+        android:layout_height="166dp"
+        android:layout_marginTop="33.5dp"
+        android:background="@drawable/circle"
+        android:backgroundTint="@color/system_theme_lightgray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textview_profileSetting" >
 
-        <ImageButton
-            android:id="@+id/button_imgProfilePlusCircle"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@drawable/circle"
-            android:backgroundTint="@color/main_theme_blue"
-            android:clickable="false"
-            android:contentDescription="@string/blank_text" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/image_profile"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:layout_gravity="center"
+            android:src="@drawable/img_profile" />
 
-        <ImageButton
-            android:id="@+id/button_imgProfilePlus"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@drawable/ic_plus"
-            android:backgroundTint="@color/general_theme_white"
-            android:contentDescription="@string/blank_text" />
     </FrameLayout>
 
+    <ImageButton
+        android:id="@+id/button_profile_plus"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:background="@drawable/ic_add"
+        android:clickable="false"
+        android:contentDescription="@string/blank_text"
+        app:layout_constraintBottom_toBottomOf="@id/frame_profile"
+        app:layout_constraintEnd_toEndOf="@id/frame_profile" />
+
     <LinearLayout
-        android:id="@+id/layout_nikname"
+        android:id="@+id/layout_nickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="43dp"
         android:background="@drawable/textbox_state_normal"
         android:orientation="horizontal"
         android:padding="15dp"
-        app:layout_constraintEnd_toEndOf="@id/imageview_profile"
-        app:layout_constraintStart_toStartOf="@id/imageview_profile"
-        app:layout_constraintTop_toBottomOf="@id/imageview_profile">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/frame_profile">
 
         <TextView
-            android:id="@+id/textview_nikname"
+            android:id="@+id/textview_nickname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/noto_sans_kr_bold"
-            android:text="@string/input_nikname"
+            android:text="@string/input_nickname"
             android:textColor="@color/general_theme_black"
             android:textSize="14sp" />
 
@@ -125,26 +106,26 @@
             android:background="@color/main_theme_blue" />
 
         <EditText
-            android:id="@+id/edittext_inputNikname"
+            android:id="@+id/edittext_nickname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="11dp"
             android:background="@android:color/transparent"
             android:enabled="true"
             android:fontFamily="@font/noto_sans_kr_bold"
-            android:hint="@string/user_name"
+            tools:text="@string/user_name"
             android:inputType="textPersonName"
             android:textColor="@color/general_theme_black"
             android:textSize="14sp" />
 
         <FrameLayout
-            android:id="@+id/layout_settingNikname"
+            android:id="@+id/layout_settingNickname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="163.2dp">
 
             <ImageButton
-                android:id="@+id/button_settingNikname"
+                android:id="@+id/button_settingNickname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/ic_front"
@@ -154,16 +135,17 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textview_overlapNikname"
+        android:id="@+id/textview_overlapNickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_kr_bold"
-        android:text="@string/overlap_nikname"
+        android:text="@string/overlap_nickname"
         android:textColor="@color/general_theme_red"
         android:textSize="10sp"
         android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="@id/layout_nikname"
-        app:layout_constraintTop_toBottomOf="@id/layout_nikname" />
+        app:layout_constraintEnd_toEndOf="@id/layout_nickname"
+        app:layout_constraintTop_toBottomOf="@id/layout_nickname"
+        tools:ignore="SmallSp" />
 
     <LinearLayout
         android:id="@+id/layout_email"
@@ -173,9 +155,9 @@
         android:background="@drawable/textbox_state_normal"
         android:orientation="horizontal"
         android:padding="15dp"
-        app:layout_constraintEnd_toEndOf="@id/layout_nikname"
-        app:layout_constraintStart_toStartOf="@id/layout_nikname"
-        app:layout_constraintTop_toBottomOf="@id/layout_nikname">
+        app:layout_constraintEnd_toEndOf="@id/layout_nickname"
+        app:layout_constraintStart_toStartOf="@id/layout_nickname"
+        app:layout_constraintTop_toBottomOf="@id/layout_nickname">
 
         <TextView
             android:id="@+id/textview_email"
@@ -193,25 +175,23 @@
             android:layout_marginStart="11dp"
             android:background="@color/main_theme_blue" />
 
-        <EditText
-            android:id="@+id/edittext_inputEmail"
+        <TextView
+            android:id="@+id/textview_userEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="11dp"
             android:background="@android:color/transparent"
             android:enabled="true"
             android:fontFamily="@font/noto_sans_kr_bold"
-            android:hint="@string/user_email"
-            android:inputType="textEmailAddress"
+            tools:text="@string/user_email"
             android:textColor="@color/general_theme_black"
             android:textSize="14sp" />
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_passwordReset"
-        android:layout_width="0dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="79dp"
         android:background="@drawable/bg_rectangle_round"
         android:backgroundTint="@color/main_theme_subblue"
         android:drawableEnd="@drawable/ic_front"
@@ -220,8 +200,10 @@
         android:padding="5dp"
         android:text="@string/password_reset"
         android:textColor="@color/general_theme_white"
-        app:layout_constraintEnd_toEndOf="@id/layout_email"
-        app:layout_constraintStart_toStartOf="@id/layout_email"
-        app:layout_constraintTop_toBottomOf="@id/layout_email" />
+        app:layout_constraintVertical_bias="0.3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/layout_email"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
